# nonogram

./: .flake8  .gitignore  README.md  docker-compose.develop.yaml  docker-compose.production.yaml  docker-compose.ssl-certificate.yaml  docker-compose.yaml  docker_build.sh  docker_build_develop.sh  docker_build_production.sh  pyproject.toml  pytest.ini  run_develop_server.sh  run_init_certificate.sh  run_performance_test.sh  run_production_server.sh  run_test.sh
docker/: Dockerfile.ApiServer  Dockerfile.Frontend  Dockerfile.NonogramServer  Dockerfile.PythonEnv
docker/production/: Dockerfile.Frontend
nginx/: nginx-init-certificate.conf.template  nginx.conf.template
prometheus/: prometheus.yaml.template
src/: utils.py
src/ApiServer/: docker_entrypoint.sh  manage.py
src/ApiServer/ApiServer/: apps.py  asgi.py  settings.py  urls.py  view.py  views.py  wsgi.py
src/NonogramServer/: docker_entrypoint.sh  manage.py  pytest.ini  run_server.sh
src/NonogramServer/Nonogram/: NonogramBoard.py  RealGameBoard.py  utils.py
src/NonogramServer/NonogramServer/: apps.py  asgi.py  models.py  (+5 more)
src/frontend/: package-lock.json  package.json  tsconfig.json
tests/: config.py  test.env  test_docker_compose.yaml
tests/NonogramServer/: conftest.py  test_views.py
tests/integration/: backend_testdata.json  conftest.py  test.env  test_backend.py  test_docker_compose.yaml
tests/performance/: CreateNewGame.py  CreateNewSession.py  GamePlay.py  config.py
tests/test_nonogram_server/: conftest.py  test_board.py  test_utils.py  test_views.py
tests/unit/: conftest.py  util.py
(+58 files in other folders)
