[tool.poetry]
name = "nonogram"
version = "0.1.0"
description = ""
authors = ["kig9981 <ingu9981@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
pytest = "^8.1.1"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
