[tool.poetry]
name = "nonogram"
version = "0.1.0"
description = ""
authors = ["kig9981 <ingu9981@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
flake8 = "^7.0.0"
django-redis = "^5.4.0"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
pytest-asyncio = "^0.23.6"
locust = "^2.26.0"
pillow = "^10.3.0"
pytest-docker = "^3.1.1"
aiohttp = "^3.9.5"
pytest-mock = "^3.14.0"
werkzeug = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
